Fix for product images collapsing in Chrome

--- a/less/plugins/ecommerce/product-gallery.less
+++ b/less/plugins/ecommerce/product-gallery.less
@@ -147,7 +147,7 @@
 
         .image {
             opacity: 0;
-            min-height: 20px; // fix for IE
+            min-height: initial; // fix for IE
             -webkit-transition: opacity 0.5s ease;
             -moz-transition: opacity 0.5s ease;
             -o-transition: opacity 0.5s ease;
